--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,68 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>反射神経テスト</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+        }
+        .header {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+        .box {
+            width: 200px;
+            height: 200px;
+            background-color: #ff6347;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            cursor: pointer;
+            user-select: none;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: background-color 0.3s, transform 0.3s;
+        }
+        .box:hover {
+            background-color: #ff4500;
+            transform: scale(1.05);
+        }
+    </style>
+</head>
+<body>
+    <div class="header">反射神経テスト</div>
+    <div class="box" id="testBox">クリックして開始</div>
+    <script>
+        const testBox = document.getElementById('testBox');
+        let startTime;
 
+        testBox.addEventListener('click', function() {
+            if (testBox.textContent === 'クリックして開始') {
+                testBox.textContent = '待ってください...';
+                setTimeout(() => {
+                    startTime = new Date();
+                    testBox.textContent = '今すぐクリック！';
+                    testBox.style.backgroundColor = '#32cd32';
+                }, Math.random() * 3000 + 1000); // 1～4秒後に反応
+            } else if (testBox.textContent === '今すぐクリック！') {
+                const reactionTime = new Date() - startTime;
+                testBox.textContent = `反応時間: ${reactionTime}ms`;
+                testBox.style.backgroundColor = '#ff6347';
+                setTimeout(() => {
+                    testBox.textContent = 'クリックして開始';
+                }, 2000); // 2秒後にリセット
+            }
+        });
+    </script>
+</body>
+</html>
