--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
             background-color: #000;
             display: block;
             margin: 0 auto;
+            border: 2px solid #0095DD;
+            border-radius: 10px;
         }
     </style>
 </head>
@@ -171,8 +173,6 @@
         const paddleHeight = 10;
         const paddleWidth = 75;
         let paddleX = (canvas.width - paddleWidth) / 2;
-        let rightPressed = false;
-        let leftPressed = false;
         const brickRowCount = 3;
         const brickColumnCount = 5;
         const brickWidth = 75;
@@ -190,25 +190,7 @@
             }
         }
 
-        document.addEventListener("keydown", keyDownHandler, false);
-        document.addEventListener("keyup", keyUpHandler, false);
         document.addEventListener("mousemove", mouseMoveHandler, false);
-
-        function keyDownHandler(e) {
-            if (e.key == "Right" || e.key == "ArrowRight") {
-                rightPressed = true;
-            } else if (e.key == "Left" || e.key == "ArrowLeft") {
-                leftPressed = true;
-            }
-        }
-
-        function keyUpHandler(e) {
-            if (e.key == "Right" || e.key == "ArrowRight") {
-                rightPressed = false;
-            } else if (e.key == "Left" || e.key == "ArrowLeft") {
-                leftPressed = false;
-            }
-        }
 
         function mouseMoveHandler(e) {
             const relativeX = e.clientX - canvas.offsetLeft;
@@ -296,12 +278,6 @@
                     alert("GAME OVER");
                     document.location.reload();
                 }
-            }
-
-            if (rightPressed && paddleX < canvas.width - paddleWidth) {
-                paddleX += 7;
-            } else if (leftPressed && paddleX > 0) {
-                paddleX -= 7;
             }
 
             x += dx;
