--- a/index.html
+++ b/index.html
@@ -275,8 +275,17 @@
                 if (x > paddleX && x < paddleX + paddleWidth) {
                     dy = -dy;
                 } else {
-                    alert("GAME OVER");
-                    document.location.reload();
+                    // Remove the alert and reload, and reset the ball position instead
+                    x = canvas.width / 2;
+                    y = canvas.height - 30;
+                    dx = 2;
+                    dy = -2;
+                    score = 0;
+                    for (let c = 0; c < brickColumnCount; c++) {
+                        for (let r = 0; r < brickRowCount; r++) {
+                            bricks[c][r].status = 1;
+                        }
+                    }
                 }
             }
 
@@ -289,5 +298,3 @@
     </script>
 </body>
 </html>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.14.2/matter.min.js"></script>
